syntax = "proto3";

package inspire.middleware.coin.config.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/inspire/middleware/v1/coin/config";

import "basetypes/v1/conds.proto";

message CoinConfigReq {
    optional uint32 ID           = 10;
    optional string EntID        = 20;
    optional string AppID        = 30;
    optional string CoinTypeID   = 40;
    optional string MaxValue     = 50;
    optional string Allocated    = 60;
}

message CoinConfig {
    // @inject_tag: sql:"id"
    uint32          ID              = 10;
    // @inject_tag: sql:"ent_id"
    string          EntID           = 20;
    // @inject_tag: sql:"app_id"
    string          AppID           = 30;
    // @inject_tag: sql:"coin_type_id"
    string          CoinTypeID      = 40;
    // @inject_tag: sql:"max_value"
    string          MaxValue        = 50;
    // @inject_tag: sql:"allocated"
    string          Allocated       = 60;
    // @inject_tag: sql:"created_at"
    uint32          CreatedAt       = 1000;
    // @inject_tag: sql:"updated_at"
    uint32          UpdatedAt       = 1010;
}

message Conds {
    optional basetypes.v1.StringVal  EntID         = 10;
    optional basetypes.v1.StringVal  AppID         = 20;
    optional basetypes.v1.StringVal  CoinTypeID    = 30;
    optional basetypes.v1.StringSliceVal EntIDs    = 40;
    optional basetypes.v1.Uint32Val  ID            = 50;
}

